hard-gists/2203822/run.log
=== Docker Run Log for 2203822 ===
Started at: Mi 29. Okt 13:00:44 CET 2025

[2025-10-29 13:00:45] START: Running container for 2203822
[2025-10-29 13:00:45] SUCCESS: Container 3f21336ecd0357525e19bc8df1fa2864337511324f9d9547df79701a21087e03 started for 2203822
=== Container logs for 2203822 ===
  File "/snippet.py", line 23
    print message
    ^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2203822 ===
[2025-10-29 13:00:47] INFO: Container 3f21336ecd0357525e19bc8df1fa2864337511324f9d9547df79701a21087e03 has stopped
